# BadPatchDetection

./: .gitmodules  CMakeLists.txt  CompareBadPatches.cpp  CustomFilters.h  CustomFilters.hpp  PotentialBadMatches.cpp  PotentialBadMatchesProjected.cpp  PotentialBadMatchesProjectedColorOnly.cpp  PotentialBadMatchesVectorized.cpp  TestCustomFilters.cpp  WriteAllBestMatches.cpp  WriteAllBestMatchesVectorized.cpp  WritePatchPair.cpp
Experiments/: AverageNeighborBlurredScore.cpp  CMakeLists.txt
